Bug 153497 - Instantly update Icon Theme info when switching Appearance Mode
Summary: Instantly update Icon Theme info when switching Appearance Mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: LibreOffice-Themes Dark-Mode
  Show dependency treegraph
 
Reported: 2023-02-09 11:31 UTC by steve
Modified: 2025-06-30 16:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
2023-02-09 switching to light mode does not update Icon theme info in settings (17.20 KB, image/png)
2023-02-09 11:38 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2023-02-09 11:31:01 UTC
Description:
With https://bugs.documentfoundation.org/show_bug.cgi?id=153229 being resolved, Settings > View now has an Appearance option.

However when switching appearing although the open window is instantly changes with dark / light mode and corresponding default icon theme, the settings info for Icon Theme remains the same.



Steps to Reproduce:
Switch Appearnce setting.

Actual Results:
Icon Theme info not updated. (no matter if Apply button is pushed or not)

Expected Results:
Icon Theme info should always reflect current UI state and be updated instantly once users change Appearance mode.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6bc6da1d03327450571b6811e192787ad90ecea2
CPU threads: 8; OS: Mac OS X 13.2; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2023-02-09 11:38:51 UTC
Created attachment 185260 [details]
2023-02-09 switching to light mode does not update Icon theme info in settings
Comment 2 Commit Notification 2023-02-10 19:37:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88cee07ee023899ffd482bbe52bf0c02c58890d0

Resolves: tdf#153497 update automatic icon-theme name on dark mode change

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2023-02-10 19:38:24 UTC
looks good to me on trunk now, backport to 7-5 in gerrit
Comment 4 Commit Notification 2023-02-10 22:56:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/71a37d733cb81d478af61425859e4c80f0f1e2f0

Resolves: tdf#153497 update automatic icon-theme name on dark mode change

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 steve 2023-02-11 15:24:29 UTC
This should be part of todays build as per https://git.libreoffice.org/core/+log/d6b590feda1c61fd5ed14c0be66379b8e5de0c6a

Settings still showing Automatic | Light | Dark

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d6b590feda1c61fd5ed14c0be66379b8e5de0c6a
CPU threads: 8; OS: Mac OS X 13.2; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 6 V Stuart Foote 2023-02-11 16:10:51 UTC
The Icon theme name toggles as appropriate to follow "mode" change Automatic, Light or Dark.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9788a565b3241d1bd62394b9e29c322361d05f80
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 7 steve 2023-02-12 19:55:22 UTC
Confirming this works as expected in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6f15382790e2e758ef7328a62341b30c655aced1
CPU threads: 4; OS: Mac OS X 13.2; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded