Resolves: tdf#153497 update automatic icon-theme name on dark mode change

Change-Id: I6b41d04ad902d5b123a110b52426ea2c2de79e4c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146774
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>